apps/base/ruman/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ruman-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ruman-frontend
  template:
    metadata:
      labels:
        app: ruman-frontend
    spec:
      containers:
        - name: ruman-frontend
          image: registry.kube.slc.net/slc/ruman-frontend:latest
          imagePullPolicy: Always
          ports:
            - protocol: TCP
              containerPort: 80
