apps/base/ruman/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ruman-frontend-service
spec:
  type: ClusterIP
  selector:
    app: ruman-frontend
  ports:
    - protocol: TCP
      port: 6969
      targetPort: 6969
