apps/base/ruman/httpsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ruman-frontend-httpsroute
  labels:
    gateway: traefik-gateway
spec:
  parentRefs:
  - name: traefik-gateway
    sectionName: websecure
    namespace: traefik
  hostnames:
  - ruman.kube.slc.net
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ruman-frontend-service
      port: 6969
